--- a/src/style.css
+++ b/src/style.css
@@ -8,7 +8,7 @@ html,
 body
 {
     overflow: hidden;
-    font-family:Arial, Helvetica, sans-serif ;
+    font-family:'Courier New', Courier, monospace ;
     color: #fff;
 
 
@@ -45,8 +45,8 @@ header {
     pointer-events: all;
     position: absolute;
     top: 0; left: 0;
-    width: 100%;
-    height: 50px;
+    width: 2vw;
+    height: 40vw;
     display: flex;
     color: #fff;
 }
@@ -89,7 +89,7 @@ img {
 
 .choose{
     pointer-events: all;
-    width: 500px;
+    width: 15vw;
     height: auto;
     margin-bottom: 10px;
     transition: all 0.7s cubic-bezier(0.215, 0.610, 0.355, 1);
@@ -102,5 +102,5 @@ img {
     width: 100%;
     text-align: center;
     text-transform: uppercase;
-    font-size: 40px;
+    font-size: 2vw;
 }
